config-root/namespaces/jx-staging/python01/python01-python01-deploy.yaml
# Source: python01/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python01-python01
  labels:
    draft: draft-app
    chart: "python01-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'python01'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: python01-python01
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: python01-python01
    spec:
      serviceAccountName: python01-python01
      containers:
      - name: python01
        image: "hub-uat.mypaas.com/hughexp/python01:0.0.1"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
