config-root/namespaces/jx-staging/python01/python01-svc.yaml
# Source: python01/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python01
  labels:
    chart: "python01-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'python01'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: python01-python01
