config-root/namespaces/jx-staging/python01/python01-ingress.yaml
# Source: python01/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'python01'
  name: python01
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: python01
            port:
              number: 80
    host: python01-jx-staging.192.168.49.2.nip.io
